# YSolowork

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  Release_linux_cmake_config.sh  cmake_config.sh  linux_cmake_config.sh  win_cmake_config.bat  win_cmake_config_Release.bat
YLine/: CMakeLists.txt
YLineServer/: .env  CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  database.cpp  database.h  docker-compose.yml  logger.cpp  logger.h  main.cpp
YLineServer/controllers/: HealthCheckCtrl.cc  HealthCheckCtrl.h  TestCtrl.cc  TestCtrl.h  YLineServer_HealthCheckCtrl.cc  YLineServer_HealthCheckCtrl.h  YLineServer_UserCtrl.cc  YLineServer_UserCtrl.h
YLineServer/controllers/models/: Users.cc  Users.h
YLineServer/controllers/utils/: api.cpp  jwt.cpp  jwt.h  passwd.cpp
YLineServer/db/migrations/: 20240923151638_create_users_table.sql  20241023055139_create_worker_table.sql  20241024055505_users_username_hash_index.sql  20241024060135_workers_uuid_hash_index.sql  20241108082236_remove workers_server_instance_uuid_UNIQUE_CONSTRAINT.sql  20241209074112_create_job_and_task_table.sql  20241210102029_rename.sql
YLineServer/inc/: job.h
YLineServer/inc/amqp/: AMQPconnectionPool.h  TrantorHandler.h
YLineServer/inc/components/: consumer.h  task.h  worker.h
YLineServer/inc/task/: consumer.h
YLineServer/inc/utils/: AMQP_Trantor.h  api.h  config.h  jwt.h  passwd.h  server.h
YLineServer/middlewares/: YLineServer_CORSMid.cc  YLineServer_CORSMid.h
YLineServer/src/: app.cpp  app.h  database.cpp  database.h  main.cpp
YLineServer/src/amqp/: AMQPconnectionPool.cpp  TrantorHandler.cpp
YLineServer/src/components/: consumer.cpp  worker.cpp
YLineServer/src/controllers/: WorkerRegister.cpp  YLineServer_JobCtrl.cc  YLineServer_JobCtrl.h  YLineServer_JobStatusCtrl.cc  YLineServer_JobStatusCtrl.h  YLineServer_UserCtrl.cc  YLineServer_UserCtrl.h  YLineServer_WorkCtrl.cc  YLineServer_WorkCtrl.h  YLineServer_WorkerCtrl.cc  YLineServer_WorkerCtrl.h  YLineServer_WorkerStatusCtrl.cc  YLineServer_WorkerStatusCtrl.h
YLineServer/src/filters/: YLineServer_AdminFilter.cc  YLineServer_AdminFilter.h  YLineServer_LoginFilter.cc  YLineServer_LoginFilter.h
YLineServer/src/middlewares/: YLineServer_CORSMid.cc  YLineServer_CORSMid.h  YLineServer_CSPMid.cc  YLineServer_CSPMid.h
YLineServer/src/models/: Jobs.cc  Jobs.h  Tasks.cc  Tasks.h  Users.cc  Workers.cc  Workers.h  model.json
YLineServer/src/task/: consumer.cpp
YLineServer/src/utils/: AMQP_Trantor.cpp  api.cpp  config.cpp  jwt.cpp  logger.cpp  passwd.cpp  server.cpp
YLineWorker/: CMakeLists.txt
YLineWorker/inc/utils/: api.h  config.h  logger.h
YLineWorker/src/: YLineWorker.cpp  YLineWorkerUI.cpp  main.cpp  ui.cpp  ui.h  worker.cpp  worker.h  worker_info.cpp  worker_json.cpp
YLineWorker/src/utils/: api.cpp  config.cpp  logger.cpp
cmake/: YSolowork_message.cmake
config_manifest/: YLineServer_Config.toml  YLineWorker_Config.toml
inc/: UTmachineInfo.h  UTnvml.h  UTtime.h
src/: UTappdata.cpp  UTappdata.h  UTconsoleUTF8.cpp  UTconsoleUTF8.h  UTdbmate.cpp  UTdbmate.h  UTdynlib.cpp  UTdynlib.h  UTfile.cpp  UTfile.h  UTmachineInfo.cpp  UTmachineInfo.h  UTnvml.cpp  UTnvml.h  UTsysmutex.h  UTtime.cpp  UTtime.h  UTusage.cpp  UTusage.h
vendor_prebuild/nvml/Windows/: nvml.lib
